# Yggdrasil

./: README.md  chain-ssh.sh
Yggdrasil/: CMakeLists.txt
Yggdrasil-LowLevelLib/: CMakeLists.txt
Yggdrasil-LowLevelLib/src_wireless/: api.c  constants.c  constants.h  data_struct.c  data_struct.h  utils.c  utils.h
Yggdrasil/applications/: CMakeLists.txt
Yggdrasil/applications/tests/ip/: hyparview_test.c
Yggdrasil/applications/tests/wireless/: batman_test.c  dispatcher_logger_test.c  dynamic_protocols_test.c  fault_detector_discovery_test.c  flow_updating_test.c  gap_test.c  limosense_test.c  mirage_test.c  push_gossip_test.c  reliable_test.c  simple_discovery_test.c  topology_test.c
Yggdrasil/applications/tupleSpace/: CMakeLists.txt  init.c  run_YggBench.sh
Yggdrasil/applications/tupleSpace/stand_alone/: CMakeLists.txt  benchmarkA.c  benchmarkB.c  my_client.c  my_resolver.c  tuple.c  tuple.h  tuple_server.c
Yggdrasil/applications/tupleSpace/ygg_based/: CMakeLists.txt  benchmarkA.c  benchmarkB.c  my_client.c  tuple.c  tuple.h  tuple_server.c  ygg_comm.c  ygg_comm.h
Yggdrasil/core/: CMakeLists.txt  proto_data_struct.c  proto_data_struct.h  ygg_runtime.c  ygg_runtime.h
Yggdrasil/core/data_structures/generic/: list.c
Yggdrasil/core/utils/: utils.c  utils.h
Yggdrasil/interfaces/: CMakeLists.txt
Yggdrasil/interfaces/discovery/: discovery_events.c  discovery_events.h
Yggdrasil/protocols/: CMakeLists.txt
Yggdrasil/protocols/wireless/: CMakeLists.txt
Yggdrasil/protocols/wireless/communication/point-to-point/: reliable.c  reliable.h
Yggdrasil/protocols/wireless/communication/routing/: batman.c
Yggdrasil/remote_control/applications/: CMakeLists.txt
Yggdrasil/remote_control_new/: CMakeLists.txt
Yggdrasil/remote_control_new/applications/: CMakeLists.txt  ControlClient.c  ControlStructure.c  cmd_server.c  cmd_server.h  control_app_cmp.c  control_app_cmp.h
Yggdrasil/remote_control_new/applications/tools/: beginexperience.c  buildtree.c  changelink.c  changevalue.c  checktree.c  debugneighbors.c  disableannounces.c  enableannounces.c  getneighbors.c  reboot.c  shutdown.c  terminateexperience.c
Yggdrasil/remote_control_new/protocols/: CMakeLists.txt  discovery.c  discovery.h  dissemination.c  dissemination.h  reliable_dissemination.c  reliable_dissemination.h
Yggdrasil/remote_control_new/utils/: CMakeLists.txt  cmdio.c  cmdio.h  commands.c  commands.h  control_protocol_utils.c  control_protocol_utils.h
Yggdrasil/utils/: CMakeLists.txt  list.h
tools/: yggctl.cfg
